# ODPlatform

./: .gitignore  .odp-workspace  README.md  pyproject.toml  visualization_doc.md
apps/desktop/: README.md  pyproject.toml
apps/desktop/src/odp_desktop/: __init__.py  alert_player.py  main.py  main_window.py  user_dir_sink.py  utils.py  worker.py
apps/desktop/src/odp_desktop/widgets/: __init__.py  control_panel.py  display_widget.py  model_panel.py  results_panel.py  source_panel.py
apps/platform/: pyproject.toml
apps/platform/docs/adr/: ADR-004-data-validation.md  ADR-005-runtime-config.md  ADR-006-training.md
apps/platform/src/odp_platform/cli/: infer.py  init_project.py  reset_project.py  train_model.py  transform_data.py  val_model.py  validate_data.py
apps/platform/src/odp_platform/common/: config_log.py  constants.py  dataset_path.py  log_rename.py  logging_utils.py  model_path.py  paths.py  performance_utils.py  plot_style.py  result.py  string_utils.py  system_utils.py
apps/platform/src/odp_platform/data_pipeline/: __init__.py  orchestrator.py  registry.py  service.py
apps/platform/src/odp_platform/data_pipeline/core/: coco.py  pascal_voc.py  yolo.py
apps/platform/src/odp_platform/data_pipeline/split/: manifest.py  materializer.py  splitter.py  yaml_writer.py
apps/platform/src/odp_platform/data_validation/: __init__.py  registry.py  render.py  report.py  service.py  snapshot.py
apps/platform/src/odp_platform/data_validation/checks/: label_format.py  pair_existence.py  split_uniqueness.py  yaml_schema.py
apps/platform/src/odp_platform/evaluation/: __init__.py  service.py
apps/platform/src/odp_platform/frame_source/: README.md  __init__.py  factory.py  overlay.py
apps/platform/src/odp_platform/frame_source/core/: __init__.py  base.py  config.py  types.py
apps/platform/src/odp_platform/frame_source/sources/: __init__.py  camera.py  image.py  video.py
apps/platform/src/odp_platform/frame_source/wrappers/: __init__.py  aio.py  threaded.py
apps/platform/src/odp_platform/inference/: __init__.py  overlay.py  pipeline.py  pipeline_config.py  service.py  sinks.py
apps/platform/src/odp_platform/runtime_config/: __init__.py  base.py  generator.py  infer.py  loaders.py  merger.py  train.py  val.py
apps/platform/src/odp_platform/training/: __init__.py  archive.py  service.py
apps/platform/src/odp_platform/visualization/: README.md  __init__.py  visualizer.py
apps/platform/src/odp_platform/visualization/core/: __init__.py  data_types.py  draw_utils.py  text_cache.py
apps/platform/tests/common/: conftest.py  test_config_log.py  test_dataset_path.py  test_log_rename.py  test_model_path.py  test_result.py
apps/platform/tests/data_pipeline/: test_e2e_smoke.py  test_registry.py
apps/platform/tests/data_pipeline/split/: test_splitter.py
apps/platform/tests/data_validation/: test_checks_yaml_schema.py  test_e2e.py  test_registry.py
apps/platform/tests/runtime_config/: __init__.py  conftest.py  test_base.py  test_generator.py  test_infer.py  test_loaders.py  test_merger.py  test_public_api.py  test_train_val.py
apps/platform/tests/training/: conftest.py  test_archive.py  test_service.py
apps/platform/tests/推理验证开发/: 01_原生推理.py
apps/platform/tests/美化测试/: 美化_ex03plus 帧源与美化全自定义.py
apps/web-backend/: README.md
apps/web-frontend/: README.md
scripts/: init_project.py  make_disaster_data.sh  reset_project.py
tests/e2e/: README.md
